Linked player information to gameboard so names appear in their team box

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <option selected="selected" value="Red">Red</option>
                     <option value="Orange">Orange</option>
                 </select> 
-                <button type="submit" id="submitTwo" class="submitButton">Submit</button>
+                <button type="button" id="submitTwo" class="submitButton">Submit</button>
             </form>
         </div>
         <div id="playerThreeInfo">
@@ -57,7 +57,7 @@
                     <option selected="selected" value="Green">Green</option>
                     <option value="Pink">Pink</option>
                 </select> 
-                <button type="submit" id="submitThree" class="submitButton">Submit</button>
+                <button type="button" id="submitThree" class="submitButton">Submit</button>
             </form>
         </div>
         <div id="playerFourInfo">
@@ -73,14 +73,14 @@
                     <option selected="selected" value="Yellow">Yellow</option>
                     <option value="Brown">Brown</option>
                 </select> 
-                <button type="submit" id="submitFour" class="submitButton">Submit</button>
+                <button type="button" id="submitFour" class="submitButton">Submit</button>
             </form>
         </div>
         <div id="spacer"></div>
     </div>
     <div id="buttonSpace">
-      <button>clear</button>
-      <button>submit</button>
+      <button>Reset Player Information</button>
+      <button>Begin Game</button>
     </div>
     <div id="playingSpace">
         <div class="empty"></div>
