--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
     </div>
     <div id="buttonSpace">
       <button>Reset Player Information</button>
-      <button>Begin Game</button>
+      <button id="beginGameButton">Begin Game</button>
     </div>
     <div id="playingSpace">
         <div class="empty"></div>
-        <div id="playerOne" class="topBottomPlayer"></div>
+        <div id="playerOne" class="topBottomPlayer"><div id="playerOneText"></div></div>
         <div class="empty"></div>
-        <div id="playerFour" class="leftRightPlayer"></div>
+        <div id="playerFour" class="leftRightPlayer"><div id="playerFourText"></div></div>
         <div id="gameBoard"></div>
-        <div id="playerTwo" class="leftRightPlayer"></div>
+        <div id="playerTwo" class="leftRightPlayer"><div id="playerTwoText"></div></div>
         <div class="empty"></div>
-        <div id="playerThree" class="topBottomPlayer"></div>
+        <div id="playerThree" class="topBottomPlayer"><div id="playerThreeText"></div></div>
         <div class="empty"></div>
     </div>
     <script src="script.js"></script>
