began working on gameplay functions. Boxes now change color when clicked

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>4 player Tic Tac Toe Practice with Objects</title>
 </head>
 <body>
-    <div id="menuBox">Four Player Tic-Tac-Toe</div>
-    <div id="instructions">The game will begin once the player details have been filled out.</div>
-    <div id="menuInterface">
+      <div id="menuBox">Four Player Tic-Tac-Toe</div>
+      <div id="instructions">Fill out names for all players and press the Begin Game button to start playing.</div>
+      <div id="topBox">
+      <div id="menuInterface">
         <div id="spacer"></div>
         <div id="playerOneInfo">
         <form id="formOne">
@@ -77,10 +78,10 @@
             </form>
         </div>
         <div id="spacer"></div>
-    </div>
-    <div id="buttonSpace">
-      <button>Reset Player Information</button>
-      <button id="beginGameButton">Begin Game</button>
+      </div>   
+      <div id="buttonSpace">
+        <button id="beginGameButton">Begin Game</button>
+      </div>
     </div>
     <div id="playingSpace">
         <div class="empty"></div>
