boxes change to color of team that select

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <label for="changeTeamColorOne">Team Color:</label>
             <select id="changeTeamColorOne">
                 <option selected disabled>Choose your color</option>
-                <option selected="selected" value="Blue">Blue</option>
-                <option value="Purple">Purple</option>
+                <option selected="selected" value="blue">Blue</option>
+                <option value="purple">Purple</option>
             </select> 
             <button type="button" id="submitOne" class="submitButton">Submit</button>
         </form>
@@ -39,8 +39,8 @@
                 <label for="changeTeamColorTwo">Team Color:</label>
                 <select id="changeTeamColorTwo">
                     <option selected disabled>Choose your color</option>
-                    <option selected="selected" value="Red">Red</option>
-                    <option value="Orange">Orange</option>
+                    <option selected="selected" value="red">Red</option>
+                    <option value="orange">Orange</option>
                 </select> 
                 <button type="button" id="submitTwo" class="submitButton">Submit</button>
             </form>
@@ -55,8 +55,8 @@
                 <label for="changeTeamColorThree">Team Color:</label>
                 <select id="changeTeamColorThree">
                     <option selected disabled>Choose your color</option>
-                    <option selected="selected" value="Green">Green</option>
-                    <option value="Pink">Pink</option>
+                    <option selected="selected" value="green">Green</option>
+                    <option value="pink">Pink</option>
                 </select> 
                 <button type="button" id="submitThree" class="submitButton">Submit</button>
             </form>
@@ -71,8 +71,8 @@
                 <label for="changeTeamColorFour">Team Color:</label>
                 <select id="changeTeamColorFour">
                     <option selected disabled>Choose your color</option>
-                    <option selected="selected" value="Yellow">Yellow</option>
-                    <option value="Brown">Brown</option>
+                    <option selected="selected" value="yellow">Yellow</option>
+                    <option value="brown">Brown</option>
                 </select> 
                 <button type="button" id="submitFour" class="submitButton">Submit</button>
             </form>
