Player turn is announced with a battlecry

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label for="nameOne">Name:</label>
             <input name="name" id="nameOne">
             <label for="battleCryOne">Battle Cry:</label>
-            <input name="battleCry" id="battleCryOne" value="I am the strongest!">
+            <input name="battleCry" id="battleCryOne" value="Roar!">
             <label for="changeTeamColorOne">Team Color:</label>
             <select id="changeTeamColorOne">
                 <option selected disabled>Choose your color</option>
@@ -51,7 +51,7 @@
                 <label for="nameThree">Name:</label>
                 <input name="name" id="nameThree">
                 <label for="battleCryThree">Battle Cry:</label>
-                <input name="battleCry" id="battleCryThree" value="I am king!">
+                <input name="battleCry" id="battleCryThree" value="Boom!">
                 <label for="changeTeamColorThree">Team Color:</label>
                 <select id="changeTeamColorThree">
                     <option selected disabled>Choose your color</option>
@@ -67,7 +67,7 @@
                 <label for="nameFour">Name:</label>
                 <input name="name" id="nameFour">
                 <label for="battleCryFour">Battle Cry:</label>
-                <input name="battleCry" id="battleCryFour" value="Hooray me!">
+                <input name="battleCry" id="battleCryFour" value="Hooray!">
                 <label for="changeTeamColorFour">Team Color:</label>
                 <select id="changeTeamColorFour">
                     <option selected disabled>Choose your color</option>
