--- a/index.html
+++ b/index.html
@@ -96,4 +96,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+<footer><p id="thanks">Thanks to www.trumpwallpapers.com for the background image</p></footer>
 </html>
